fix(checkbox): core component tick alignment

--- a/packages/core/src/checkbox/checkbox.element.scss
+++ b/packages/core/src/checkbox/checkbox.element.scss
@@ -36,7 +36,6 @@
   display: none;
   height: calc(#{$cds-global-space-3} + #{$cds-global-space-1});
   width: $cds-global-space-5;
-  top: $cds-global-space-1;
   left: $cds-global-space-3;
   border-left: $cds-global-space-2 solid;
   border-bottom: $cds-global-space-2 solid;
